# fastapi-web-scraper

./: .env  .env.example  README.md  docker-compose.local.yaml  pyproject.toml
app/: main.py
app/api/: router.py
app/common/cache/: abstract.py  strategy.py
app/common/notification/: abstract.py  strategy.py
app/common/storage/: abstract.py  strategy.py
app/core/: auth.py  config.py  db.py
app/scrape/: models.py  router.py  schemas.py  scraper.py  service.py
app/utils/: rate_limiter.py  retry.py
